get started for free form distortion fixed

--- a/style.css
+++ b/style.css
@@ -489,7 +489,7 @@ footer ul li a {
         width: 31em;
     }
     .section-form {
-        width: 5em;
+        width: 30em;
     }
     .get-started-free-input {
         width: 30em;
